<resources>
    <string name="app_name">易贝</string>
    <string name="version_name">1.0</string>

    <string name="home_see_all">查看全部</string>
    <string name="home_hot_recommend">热门推荐</string>
    <string name="home_more">更多</string>

    <string name="come_yibei">来源于易贝</string>
    <string name="new_price">最新价格</string>
    <string name="rise_and_fall">涨跌幅</string>

    <string name="simple">简单</string>
    <string name="senior">高级</string>
    <string name="number_of_traders">交易手数</string>
    <string name="purchase">买入</string>
    <string name="sell_out">卖出</string>

    <string name="one_times">0.01手</string>
    <string name="two_times">0.1手</string>
    <string name="three_times">0.5手</string>
    <string name="four_times">1手</string>

    <string name="trade_style">交易方式</string>
    <string name="trade_type">交易类型</string>
    <string name="market_trade">市价交易</string>
    <string name="pending_trade">挂单交易</string>
    <string name="transaction_price">成交价格</string>
    <string name="trade_times">交易手数</string>
    <string name="stop_loss_price">止损价格</string>
    <string name="stop_profit_price">止盈价格</string>
    <string name="cl_buy">确认买入</string>
    <string name="cl_sell">确认卖出</string>

    <string name="time_sharing">分时</string>
    <string name="one_minute">1分</string>
    <string name="five_minute">5分</string>
    <string name="fifteen_minute">15分</string>
    <string name="thirty_minute">30分</string>
    <string name="one_hour">1时</string>
    <string name="four_hour">4时</string>
    <string name="day_line">日线</string>
    <string name="weeek_line">周线</string>
    <string name="month_line">月线</string>

    <string name="cancle_collection">取消自选</string>

    <string name="price">价格</string>
    <string name="expected_loss">预计亏损</string>
    <string name="expected_profit">预计盈利</string>
    <string name="not_setting">未设置</string>

    <string name="about_use_margin">约使用保证金</string>
    <string name="userful_margin">可用保证金</string>
    <string name="network_error">网络异常</string>
    <string name="cancle_collection_success">取消自选成功</string>
    <string name="add_collection_success">添加自选成功</string>

    <string name="cancle">取消</string>
    <string name="confirm">确认</string>
    <string name="remind_one">提醒：强烈建议您设置止盈/止损</string>
    <string name="remind_two">您确定要</string>
    <string name="lots">手</string>
    <string name="ma">吗?</string>

    <string name="open_position_success">开仓成功</string>
    <string name="trade_variety">交易品种</string>
    <string name="opening_direction">开仓方向</string>
    <string name="opening_price">开仓价格</string>
    <string name="position_time">开仓时间</string>

    <string name="user_margin">占用保证金</string>
    <string name="user_margin2">占用金额</string>
    <string name="konw_it">知道了</string>
    <string name="view_order_record">查看订单记录</string>

    <string name="pending_price">委托价格</string>
    <string name="pending_price2">挂单价格</string>

    <string name="pending">挂单</string>
    <string name="pending_success">挂单成功</string>
    <string name="pending_direction">挂单方向</string>


    <string name="float_profit_loss">浮动盈亏</string>
    <string name="have_used_margin">已用保证金</string>
    <string name="account_worth">账户净值</string>
    <string name="account_balance">账户余额</string>
    <string name="position">持仓</string>
    <string name="history">历史</string>
    <string name="close_the_position">平仓</string>
    <string name="withdrawal">撤单</string>
    <string name="open_position_price">开仓价</string>
    <string name="close_position_price">平仓价</string>
    <string name="income">收益</string>
    <string name="confirm_close_position">确认平仓</string>
    <string name="expected_profit_loss">预计盈亏</string>
    <string name="current_price">当前价格</string>
    <string name="current_price2">当前价</string>
    <string name="order_number">订单编号</string>
    <string name="margin_and_null">保证金&#12288;</string>

    <string name="phone_quick_login">手机快捷登录</string>
    <string name="account_login">账号登录</string>
    <string name="login_explain">未注册易贝外汇的手机号，登录时将自动注册</string>
    <string name="please_write_phone_num">请输入手机号码/邮箱</string>
    <string name="please_write_verify_code">请输入验证码</string>
    <string name="please_write_password">请输入密码</string>
    <string name="forgit_password">忘记密码</string>
    <string name="no_account_to_regise">没有账号？直接注册</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="login">登录</string>
    <string name="regist">注册</string>
    <string name="mail_box">邮箱</string>
    <string name="please_write_mail_box">请填写您的邮箱</string>
    <string name="mail_box_error">您的邮箱格式有误</string>
    <string name="country_area">国家/地区</string>
    <string name="china_mainland">(CHINA)中国大陆</string>
    <string name="china_hongkong">(Hong Kong)中國香港</string>
    <string name="please_write_phone">请填写您的手机号</string>
    <string name="phone_num_error">您的手机号输入有误,请重新输入</string>
    <string name="password">密码</string>
    <string name="password_style">10-15位,数字和字母的混合</string>
    <string name="password_error">密码必须为10-15位,数字和字母的混合</string>

    <string name="i_have_agree">我已经阅读并同意</string>
    <string name="register_agreement">《易贝APP的注册协议》</string>
    <string name="next">下一步</string>
    <string name="regis_success">恭喜你，注册成功</string>
    <string name="your_account">您的账号</string>
    <string name="have_rigist">已经完成注册!</string>
    <string name="rigst_get_this">您已免费获得</string>
    <string name="experience_gold">体验金!</string>
    <string name="finish">完成</string>

    <string name="reset_pass">重置密码</string>
    <string name="reset_pass_explain">如果需要重置密码，请填写您的邮箱地址</string>
    <string name="please_your_addr">请填写你的邮箱地址</string>


    <string name="yibei_forex">易贝外汇</string>
    <string name="asset_balance">资产余额</string>
    <string name="profit_rate">盈利订单率</string>
    <string name="open_account_explain">马上开户让赚钱变成现实</string>
    <string name="open_account_step">填写身份信息-经纪商审核-绑定账户</string>
    <string name="open_real_account">开设真实账户</string>
    <string name="position_amount">持仓量</string>
    <string name="cumulative_income">累计收益</string>
    <string name="bi">笔</string>
    <string name="standard_hand">标准手</string>
    <string name="data_statistics">数据统计</string>
    <string name="trade_report">交易报表</string>
    <string name="help_center">帮助中心</string>
    <string name="feedback">意见反馈</string>
    <string name="about_yibei">关于易贝</string>
    <string name="demo_account">模拟账户</string>
    <string name="account_manager">账户管理</string>
    <string name="open_new_account">开设新账户</string>
    <string name="open_more_account">开设更多经纪商账号>></string>
    <string name="illegal_phone">手机号码输入错误</string>
    <string name="incomplete_info">请将信息填写完整</string>
    <string name="net_not_work">网络不可用</string>
    <string name="check_your_net_setting">请检查您的网络设置</string>
    <string name="reload">重新加载</string>
    <string name="not_data">暂时没有相关数据</string>
    <string name="net_error">网络异常</string>
    <string name="drop_out_app">确认退出应用？</string>


    <string name="choose_broker_explain">易贝外汇平台选择的经济商是经过严格筛选审核的，具有从事相关行业牌照，且受相关机构和部门的监管的合法正规平台，xxx并不给你提供交易软件(如MT4)及交易技术支持，也不对交易资金做任何担保。您在合作经纪商平台交易的资金风险和使用交易软件存在风险，xxx概不负担任何法律风险。</string>
    <string name="expand">展开</string>
    <string name="close">收起</string>
    <string name="choose_boker">选择经纪商</string>
    <string name="account_opening_tutorial">开户教程</string>
    <string name="aetos_explain">AETOS Capital Group艾拓思资本集团为国际知名的金融交易服务商，致力于为零售客户及金融机构提供广泛的金融衍生产品交易，主要包括外汇等CFD产品。优势：手机在线出入金。</string>
    <string name="regulatory_mechanism">监管机构：FCA&amp;ASIC</string>
    <string name="withdraw_stytle">入金方式：首次最低入金$250,支持支付宝入金。</string>
    <string name="aetos_net">详情请至经纪商官网：http://www.aetoscg.asia</string>
    <string name="have_trade_account">已有交易真实账号,</string>
    <string name="quick_bind">立即绑定>></string>
    <string name="quick_bind2">立即绑定</string>
    <string name="account_id">账户ID</string>
    <string name="maturity">到期时间</string>
    <string name="have_maturity">该账户已过期</string>

    <string name="account_bind">账户绑定</string>
    <string name="mt4_account">MT4账户</string>
    <string name="mt4_password">MT4账户密码</string>
    <string name="login_server">登录服务器</string>
    <string name="mt4_bind_success">绑定成功</string>
    <string name="bind_explain">说明：您在经纪商注册开户后，经纪商会将MT4账户和密码以及登录服务器名称通过邮件/短信的方式发送给您，您可以在您的注册邮箱中查看。此账户信息与易贝无关。</string>

    <string name="withdraw_recharge">&#8194;去出入金&#8194;</string>

    <string name="financial_calendar">财经日历</string>
    <string name="infomation">资讯</string>
    <string name="stop_loss_profit">止损/止盈</string>
    <string name="float_profit_explain">含手续费 库存费</string>
    <string name="profit_and_loss">盈亏</string>
    <string name="inventory_fee">库存费</string>
    <string name="handling_fee">手续费</string>

    <string name="cancel">撤销</string>
    <string name="switch_account">切换账户</string>
    <string name="simulation_account">模拟账号</string>

    <string name="head">头像</string>
    <string name="nickname">昵称</string>
    <string name="bind_phone_num">绑定手机号</string>
    <string name="sign_out">退出登录</string>
    <string name="photo_dialog_photo">相机</string>
    <string name="photo_dialog_album">选取图片</string>
    <string name="edit_person_info">个人信息编辑</string>
    <string name="cancel_do">操作取消</string>

    <string name="trade_report_explain">图表截止于每日24:00，次日清晨更新。</string>
    <string name="total_revenue_net_worth">总收益/净值</string>
    <string name="day_profit">每日收益</string>
    <string name="total_profit">总收益</string>
    <string name="net_worth">净值</string>
    <string name="loading_all">已加载全部！</string>
    <string name="cancel_pending">您确定撤销</string>
    <string name="order">订单</string>
    <string name="can_not_deal">暂时无法操作</string>
    <string name="do_nothing">操作无效</string>
    <string name="pending_time">挂单时间</string>
    <string name="order_pending_details_closetype_2">买入限价</string>
    <string name="order_pending_details_closetype_3">卖出限价</string>
    <string name="order_pending_details_closetype_4">买入止损</string>
    <string name="order_pending_details_closetype_5">卖出止损</string>

    <string name="login_first">请先登录</string>
</resources>
