<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100px"
        android:paddingLeft="@dimen/padding_left_and_right"
        android:text="@string/regis_success"
        android:textColor="@color/one_text_color"
        android:textSize="@dimen/text_size_64" />

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100px"
        android:paddingLeft="@dimen/padding_left_and_right"
        android:paddingRight="@dimen/padding_left_and_right">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_account"
            android:textColor="@color/nine_text_color"
            android:textSize="@dimen/text_size_34" />

        <TextView
            android:id="@+id/tv_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="***********"
            android:textColor="@color/main_color"
            android:textSize="@dimen/text_size_34" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_rigist"
            android:textColor="@color/nine_text_color"
            android:textSize="@dimen/text_size_34" />

    </com.zhy.autolayout.AutoLinearLayout>

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="39px"
        android:paddingLeft="@dimen/padding_left_and_right"
        android:paddingRight="@dimen/padding_left_and_right">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rigst_get_this"
            android:textColor="@color/nine_text_color"
            android:textSize="@dimen/text_size_34" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="  $10,000  "
            android:textColor="@color/main_color"
            android:textSize="@dimen/text_size_34" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/experience_gold"
            android:textColor="@color/nine_text_color"
            android:textSize="@dimen/text_size_34" />

    </com.zhy.autolayout.AutoLinearLayout>

    <Button
        android:id="@+id/btn_finish"
        android:layout_width="match_parent"
        android:layout_height="90px"
        android:layout_marginLeft="@dimen/padding_left_and_right"
        android:layout_marginRight="@dimen/padding_left_and_right"
        android:layout_marginTop="99px"
        android:background="@drawable/btn_select"
        android:text="@string/finish"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_32" />


</com.zhy.autolayout.AutoLinearLayout>