<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/bar_white_bg_layout" />

    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_or_division_color"
        android:paddingBottom="5dp"
        android:paddingLeft="@dimen/padding_left_and_right"
        android:paddingRight="@dimen/padding_left_and_right"
        android:paddingTop="10dp">

        <com.ts.lys.yibei.customeview.ExpandTextView
            android:id="@+id/expand_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="3dp"
            android:text="@string/choose_broker_explain"
            android:textColor="@color/two_text_color"
            android:textSize="@dimen/text_size_24"
            app:arrowAlign="bottom"
            app:arrowPosition="right"
            app:maxCollapsedLines="2" />

    </com.zhy.autolayout.AutoRelativeLayout>

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/padding_left_and_right">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/simple_mmig_icon" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/account_opening_tutorial"
            android:textColor="@color/two_text_color"
            android:textSize="@dimen/text_size_28" />

    </com.zhy.autolayout.AutoLinearLayout>

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding_left_and_right"
        android:paddingRight="@dimen/padding_left_and_right">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aetos_explain"
            android:textColor="@color/two_text_color"
            android:textSize="@dimen/text_size_24" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_left_and_right"
            android:text="@string/regulatory_mechanism"
            android:textColor="@color/two_text_color"
            android:textSize="@dimen/text_size_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_left_and_right"
            android:text="@string/withdraw_stytle"
            android:textColor="@color/two_text_color"
            android:textSize="@dimen/text_size_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_left_and_right"
            android:paddingTop="@dimen/padding_left_and_right"
            android:text="@string/aetos_net"
            android:textColor="@color/two_text_color"
            android:textSize="@dimen/text_size_24" />


        <Button
            android:id="@+id/btn_go"
            android:layout_width="match_parent"
            android:layout_height="100px"
            android:background="@drawable/btn_select"
            android:enabled="true"
            android:text="@string/open_real_account"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_32"
            app:layout_auto_basewidth="height" />

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="@dimen/padding_left_and_right"
            android:paddingTop="@dimen/padding_left_and_right">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_trade_account"
                android:textColor="@color/two_text_color"
                android:textSize="@dimen/text_size_24" />

            <TextView
                android:id="@+id/tv_bind_mt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/quick_bind"
                android:textColor="@color/blue"
                android:textSize="@dimen/text_size_24" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/iv_doubt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:src="@mipmap/doubt_icon" />

        </com.zhy.autolayout.AutoLinearLayout>


    </com.zhy.autolayout.AutoLinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/bg_or_division_color" />

</com.zhy.autolayout.AutoLinearLayout>