<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:minWidth="10000dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/text_white_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/photo_textview"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:gravity="center"
            android:text="@string/photo_dialog_photo"
            android:textColor="@color/main_color"
            android:textSize="17sp" />

        <include layout="@layout/incloud_division_1dp_layout" />

        <TextView
            android:id="@+id/album_textview"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:gravity="center"
            android:text="@string/photo_dialog_album"
            android:textColor="@color/main_color"
            android:textSize="17sp" />

    </LinearLayout>


    <TextView
        android:id="@+id/cancel_textview"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_margin="15dp"
        android:background="@drawable/text_white_bg"
        android:gravity="center"
        android:text="@string/cancle"
        android:textColor="@color/main_color"
        android:textSize="17sp" />

</LinearLayout>
