<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/include_no_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">


    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_account_explain"
            android:textColor="@color/one_text_color"
            android:textSize="@dimen/text_size_30" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/open_account_step"
            android:textColor="@color/two_text_color"
            android:textSize="@dimen/text_size_22" />


    </com.zhy.autolayout.AutoLinearLayout>

    <TextView
        android:id="@+id/tv_open_real_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:background="@drawable/gradual_change_up_down_bg"
        android:gravity="center"
        android:paddingBottom="7dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="7dp"
        android:text="@string/open_real_account"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_22" />

</com.zhy.autolayout.AutoLinearLayout>